alignment of book card fixed

--- a/src/Components/Books/Books.css
+++ b/src/Components/Books/Books.css
@@ -14,6 +14,8 @@
   .heart {
     width: 10%; 
     float: right;
+    bottom:0;
+    
   }
   
   .image {
@@ -24,6 +26,7 @@
   .title {
     font-size: 1em;
     text-align: center;
+    height:75px;
   }
   
   .container {
@@ -31,4 +34,10 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size:1em;
     padding:10px;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+
   }
+
+
