--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -62,4 +62,5 @@
 .mainLogo{
     display: flex;
     justify-content: center;
+    flex-grow: 1;
 }
